--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ body {
     background-color: #fafbfb;
 }
 
+.body_container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 ul li {
     list-style-type: none;
 }
@@ -61,6 +67,14 @@ button {
 .header {
     height: var(--fixed-header-height);
     padding: 0 1.7rem;
+    flex-shrink: 0;
+}
+
+.header_container {
+    height: var(--fixed-header-height);
+    padding: 0 1.7rem;
+    flex-shrink: 0;
+    border-bottom: 2px dashed #ee6c4d
 }
 
 /* nav */
@@ -117,6 +131,7 @@ button {
 .show {
     right: 3% !important;
 }
+
 /* media queries */
 
 @media screen and (min-width: 768px) {
@@ -384,6 +399,11 @@ button {
 
     /* Idea Section */
 
+    #idea_wrapper {
+        background-color: #869ab8;
+        padding-bottom: 150px;
+    }
+
     .grid-cols-3 {
         width: 100%;
         height: 100%;
@@ -406,7 +426,7 @@ button {
     .icon i {
         width: 30px;
         height: 30px;
-        color: var(--link-color);
+        color: var(--primary-color);
     }
 
     .featured_info {
@@ -418,7 +438,8 @@ button {
         display: block;
         font-size: 21px;
         line-height: 33px;
-        color: var(--lg-heading);
+        color: white;
+        font-weight: 500;
     }
 
     .featured_info p {
@@ -426,17 +447,22 @@ button {
         width: 100%;
         margin-top: 7px;
         font-weight: 400;
-        color: #334157;
+        color: white;
         line-height: 25px;
         font-size: 15.5px;
     }
 
     footer {
-        width: 100%;
-        background-color: var(--primary-color);
-        height: 12px;
-        margin-top: 3.5rem;
+        height: 25px;
+        display: flex;
         position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background: var(--primary-color);
+        color: var(--btn-hover-color);
+        align-items: center;
+        justify-content: center;
     }
 
 @media screen and (max-width: 768px) {
